Добавлена документация Swagger, и возможность запуска в Docker